# wokelangiser

./: .envrc  .envrc.example  .gitignore  .guix-channel  0-AI-MANIFEST.a2ml  CHANGELOG.adoc  CHANGELOG.md  Cargo.toml  EXPLAINME.adoc  Justfile  Mustfile  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  ROADMAP.adoc  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  contractile.just  eclexiaiser.toml  flake.nix  guix.scm  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  selur-compose.toml  setup.sh  stapeln.toml
.claude/: CLAUDE.md
.devcontainer/: Containerfile  README.adoc  devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIRECTORY.adoc  GOVERNANCE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: abi-ffi-gate.yml  branch-cleanup.yml  codeql.yml  governance.yml  hypatia-scan.yml  instant-sync.yml  release.yml  rhodibot.yml  rust-ci.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  (+1 more)
.machine_readable/: ADJUST.contractile  CLADE.a2ml  ENSAID_CONFIG.a2ml  INTENT.contractile  MUST.contractile  README.adoc  TRUST.contractile
.well-known/: ai.txt  humans.txt  security.txt
container/: Containerfile  README.adoc  manifest.toml
docs/: QUICKSTART.adoc  README.adoc  RSR_OUTLINE.adoc  STATE-VISUALIZER.adoc
examples/: README.adoc
features/: README.adoc
scripts/: abi-ffi-gate.py  install-zig.sh
src/: README.adoc  lib.rs  main.rs
tests/: integration_test.rs
verification/: README.adoc
(+126 files in other folders)
