# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "wokelangiser"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Add consent patterns, inclusive errors, and accessibility to existing code via WokeLang"
license-file = "LICENSE"
repository = "https://github.com/hyperpolymath/wokelangiser"
keywords = ["wokelang", "acceleration", "code-generation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "2"
serde_json = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
